--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
         <div class="col-lg-9 align-self-center">
           <div class="row">
             <div class="col-lg-12">
-              <form id="contact" action="" method="post">
+              <form id="contact" action="" method="">
                 <div class="row">
                   <div class="col-lg-12">
                     <h2 style="color: #fff;">Let's get in touch</h2>
